--- a/Kakao.css
+++ b/Kakao.css
@@ -119,8 +119,27 @@ p {
     position: absolute;
     right: 10px;
 }
+
+.input-wrap {
+    display: flex;
+}
+.input-text {
+    margin-top: 10px;
+    width: 100%;
+    height: 64px;
+}
+#text-area {
+    width: 95%;
+    height: 100%;
+    margin: 10px;
+    border: none;
+    resize: none;
+}
+#text-area:focus {
+    outline: none;
+}
 .enter {
-    position: absolute;
+    margin-top: 10px;
     right: 10px;
     bottom: 10px;
     width: 64px;
@@ -131,20 +150,6 @@ p {
     line-height: 64px;
     color: rgb(178, 178, 178);
     background: rgb(249, 249, 249);
-}
-.input-text {
-    width: 100%;
-    height: 64px;
-}
-#text-area {
-    width: 85%;
-    height: 100%;
-    margin: 10px;
-    border: none;
-    resize: none;
-}
-#text-area:focus {
-    outline: none;
 }
 
 /* 컨텐츠 */
